Bug 606608 - compensate for body overflow, at least to keep content readable.

--- a/media/css/screen.css
+++ b/media/css/screen.css
@@ -488,6 +488,7 @@ ul.index a:hover, ul.index a:focus, ul.index a:active { color: #2f2f2f; text-dec
 
 /* @Footer *********/
 #footbar { padding: 1.3em 0 0; background: #450000; border-bottom: 6px solid #3c0000; color: #f5f5f0; font: italic .928em/1.1 Georgia, Times, "Times New Roman", serif; text-align: right; }
+#footbar .wrap { background: #450000; }
 #footbar p { text-align: right; margin: 0 0 1em; }
 #footbar a:link, #footbar a:visited, 
 #site-info a:link, #site-info a:visited { color: #eb9f81; }
@@ -495,6 +496,7 @@ ul.index a:hover, ul.index a:focus, ul.index a:active { color: #2f2f2f; text-dec
 #site-info a:hover, #site-info a:focus, #site-info a:active { color: #fff; }
 
 #site-info { background: #000; padding: 30px 0 50px; border-top: 1px solid #5d0900; color: #f1f1ec; font-size: .785em; }
+#site-info .wrap { background: #000; }
 #site-info #legal { position: relative; width: 615px; float: left; padding-left: 55px; }
 #site-info #legal img { position: absolute; left: -3px; top: -10px; }
 #site-info p { margin: 0 0 .5em; }
